@@ -1,3 +1,7 @@
+27 March 2014: Wouter
+	- Fix delete or rename of a lot of zones and make it take a
+	  non-enormous time.  Database compaction is deferred.
+
 25 March 2014: Wouter
 	- nsd shuts down during init process if given signal.
 	- shorter logging for zone transfer fail rcodes.
